IronEngineer/force-app/main/default/objects/Animal__c/fields/Aquired_From__c.field-meta.xml
<CustomField>
    <fullName>Aquired_From__c</fullName>
    <label>Aquired From</label>
    <type>TextArea</type>
</CustomField>