IronEngineer/force-app/main/default/objects/Animal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alive</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Undead</fullName>
            </value>
            <value>
                <fullName>Ghost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>